Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
 <ul>
 <li>As a resource provider, enable users from a given VO to get access to a OpenStack installation.</li>
 <li>As a user, use the VOMS credentials to authenticate against a VOMS aware OpenStack cloud using the standard tools, without any modifications (using the <a href="https://github.com/IFCA/voms-auth-system-openstack">VOMS authentication plugin</a>).</li>
-</ul>
+</ul><h2>
+<a name="documentation" class="anchor" href="#documentation"><span class="octicon octicon-link"></span></a>Documentation</h2>
+
+<p>Documentation can be read <a href="https://keystone-voms.readthedocs.org/en/latest/">online in readthedocs.org</a>.</p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/IFCA">IFCA</a></p>
