--- a/index.html
+++ b/index.html
@@ -31,6 +31,17 @@
         <h1>
 <a name="keystone-voms-authentication-module" class="anchor" href="#keystone-voms-authentication-module"><span class="octicon octicon-link"></span></a>Keystone VOMS authentication module</h1>
 
+<p>This module is intended to provide VOMS authentication to a Grizzly
+OpenStack Keystone. It is designed to be integrated as an external
+authentication plugin, so that Keystone will preserve its original
+features and users will still be able to authenticate using any of the
+Keystone native mechanisms.</p>
+
+<h2>
+<a name="documentation" class="anchor" href="#documentation"><span class="octicon octicon-link"></span></a>Documentation</h2>
+
+<p>Documentation can be read <a href="https://keystone-voms.readthedocs.org/en/latest/">online in readthedocs.org</a>.</p>
+
 <h2>
 <a name="what-is-this" class="anchor" href="#what-is-this"><span class="octicon octicon-link"></span></a>What is this?</h2>
 
@@ -39,10 +50,7 @@
 <ul>
 <li>As a resource provider, enable users from a given VO to get access to a OpenStack installation.</li>
 <li>As a user, use the VOMS credentials to authenticate against a VOMS aware OpenStack cloud using the standard tools, without any modifications (using the <a href="https://github.com/IFCA/voms-auth-system-openstack">VOMS authentication plugin</a>).</li>
-</ul><h2>
-<a name="documentation" class="anchor" href="#documentation"><span class="octicon octicon-link"></span></a>Documentation</h2>
-
-<p>Documentation can be read <a href="https://keystone-voms.readthedocs.org/en/latest/">online in readthedocs.org</a>.</p>
+</ul>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/IFCA">IFCA</a></p>
