--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ Keystone native mechanisms.</p>
 <h2>
 <a name="documentation" class="anchor" href="#documentation"><span class="octicon octicon-link"></span></a>Documentation</h2>
 
-<p>Documentation can be read <a href="https://keystone-voms.readthedocs.org/en/latest/">online in readthedocs.org</a>.</p>
+<p>Documentation can be read <a href="https://keystone-voms.readthedocs.org/en/">online in readthedocs.org</a>.</p>
 
 <h2>
 <a name="what-is-this" class="anchor" href="#what-is-this"><span class="octicon octicon-link"></span></a>What is this?</h2>
