remove Grizzly reference

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <h1>
 <a name="keystone-voms-authentication-module" class="anchor" href="#keystone-voms-authentication-module"><span class="octicon octicon-link"></span></a>Keystone VOMS authentication module</h1>
 
-<p>This module is intended to provide VOMS authentication to a Grizzly
+<p>This module is intended to provide VOMS authentication to an
 OpenStack Keystone. It is designed to be integrated as an external
 authentication plugin, so that Keystone will preserve its original
 features and users will still be able to authenticate using any of the
